--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.6",
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "firebase": "^5.5.5",
+    "mdbreact": "^4.8.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "react-tone": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
