--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ telbazz-sender-src/deploy-cordova.sh
 telbazz-sender-target/platforms/
 telbazz-sender-target/node_modules/
 telbazz-sender-target/package-lock.json
-
+telbazz-sender-traget/www
 
 # Project source (react.js) .gitignore files
 #See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
