--- a/telebazz-sender-src/package.json
+++ b/telebazz-sender-src/package.json
@@ -2,6 +2,7 @@
   "name": "tone-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.6",
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
