--- a/telebazz-sender-src/package.json
+++ b/telebazz-sender-src/package.json
@@ -9,6 +9,8 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "firebase": "^5.5.5",
     "mdbreact": "^4.8.2",
+    "mobx": "^5.8.0",
+    "mobx-react": "^5.4.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
